fix(ui): fix minor spacing issues from Vanilla 3 update (#3722)
This branch fixes spacing in section headers, tables with checkboxes, and KVM resource meters.

--- a/ui/src/app/base/components/SectionHeader/_index.scss
+++ b/ui/src/app/base/components/SectionHeader/_index.scss
@@ -4,10 +4,23 @@
   }
 
   .section-header__title {
-    margin: 0 $sph--small $spv--large 0;
+    margin: 0 $sph--large $spv--large 0;
   }
 
   .section-header__subtitle {
-    margin: 0 $sph--small $spv--large 0;
+    margin: 0 $sph--large $spv--large 0;
+  }
+
+  .section-header__buttons {
+    margin-bottom: 0;
+
+    // We want the title to dictate the overall size of the header, so we reduce
+    // the margin of any buttons inside. We don't remove margin entirely, so at
+    // small screens they stack properly.
+    > [class*="p-button"],
+    > * > [class*="p-button"],
+    .p-contextual-menu__toggle {
+      margin-bottom: $spv--small;
+    }
   }
 }
